# lilac

./: .gitmodules  CMakeLists.txt  EULA  LICENSE  README.md  commit.bat  commit.sh
api/: Hook.h  Lilac.h  Loader.h  Mod.h  Types.h  lilac.hpp  modapi.hpp
api/keybinds/: Keybind.hpp  KeybindAction.hpp  KeybindManager.hpp  MouseButton.hpp
api/lilac/: CustomLoader.hpp  Hook.hpp  Loader.hpp  LoaderBase.hpp  Log.hpp  Macros.hpp  Mod.hpp  Result.hpp  SharedMod.hpp  Types.hpp  VersionInfo.hpp  Win32.hpp  windows.hpp
api/utils/: utils.hpp
api/utils/gd/: casts.hpp  convert.hpp  general.hpp  include_gd.hpp  macros.hpp  node.hpp  operators.hpp  stream.hpp  win32.hpp
api/utils/other/: casts.hpp  const_string.hpp  ext.hpp  file.hpp  general.hpp  map.hpp  platform.hpp  result.hpp  string.hpp  types.hpp  vector.hpp  view.hpp  win32.hpp
docs/: BUILDING.md  KEYBINDS.md  USAGE.md
include/: lilac.hpp
src/: CMakeLists.txt  Mod.cpp  entry.cpp  entry.hpp  impl.cpp  impl.hpp  lilac.h  loader_main.cpp  proxy_loader.c  shesh.txt  winEntry.cpp
src/hooks/: address.hpp  dispatchMsg.cpp  hook.hpp  keyDownUp.cpp
src/keybinds/: Keybind.cpp  KeybindAction.cpp  KeybindManager.cpp  defaultBinds.cpp
src/lilac/: CLIManager.cpp  CustomLoader.cpp  Hook.cpp  Internal.cpp  Internal.hpp  Loader.cpp  Log.cpp  Mod.cpp  SharedMod.cpp  VersionInfo.cpp  load.cpp
src/lilac/internal/: CApiMod.cpp  CApiMod.hpp  Internal.cpp  Internal.hpp  InternalMod.cpp  InternalMod.hpp
src/lilac/platform/: Loader_win32.cpp  Mod_win32.cpp
src/lilac/platform/win32/: Loader.cpp  Mod.cpp
src/utils/gd/: convert.cpp  general.cpp  node.cpp  stream.cpp  win32.cpp
src/utils/other/: file.cpp  general.cpp  string.cpp  vector.cpp
src/utils/other/win32/: funcs_win32.cpp  platform_win32.cpp  win32.cpp
test/: CMakeLists.txt  main.cpp
test/mod1/: CMakeLists.txt  mod.json  mod1.cpp  mod1.hpp
test/mod2/: CMakeLists.txt  mod.json  mod2.cpp  mod2.hpp
test/mod3/: CMakeLists.txt  mod3.cpp  mod3.hpp
